added ball file

--- a/MatterJSBoilerPlate-master 2/index.html
+++ b/MatterJSBoilerPlate-master 2/index.html
@@ -12,6 +12,8 @@
       <script src="sketch.js"></script>
       <script src="ball.js"></script>
       <script src="bin.js"></script>
+      <script src="ground.js"></script>
+
 
     </head>
     <body>
